[workspace]
members = [ 
    "async_shared",
    "derive",
    "http",
    "picking"
]

[package]
name = "bevy_defer"
version = "0.12.0"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy_defer"
description = """
A simple asynchronous runtime for executing async coroutines.
"""
keywords = ["bevy", "async", "defer"]

[features]
default = ["bevy_ui", "bevy_animation", "bevy_scene", "derive"]
derive = ["bevy_defer_derive"]

[dependencies]
async_shared = {version = "0.1", path = "./async_shared"}
bevy_defer_derive = { version = "0.1", path = "./derive", optional = true }
futures = { version = "0.3.30", default-features = false }
async-executor = "1.10.0"

thiserror = "1"
ref-cast = "1.0.22"
rustc-hash = "2.0.0"
async-oneshot = "0.5.9"
scoped-tls-hkt = "0.1.4"
event-listener = "5.3.0"
event-listener-strategy = "0.5.2"
ty_map_gen = "0.1.6"

bevy_ecs = "0.14.0-rc.3"
bevy_state = "0.14.0-rc.3"
bevy_hierarchy = "0.14.0-rc.3"
bevy_app = "0.14.0-rc.3"
bevy_asset = "0.14.0-rc.3"
bevy_reflect = "0.14.0-rc.3"
bevy_log = "0.14.0-rc.3"
bevy_tasks = "0.14.0-rc.3"
bevy_time = "0.14.0-rc.3"
bevy_math = "0.14.0-rc.3"
bevy_core = "0.14.0-rc.3"
bevy_utils = "0.14.0-rc.3"

bevy_animation = { version = "0.14.0-rc.3", optional = true }
bevy_ui = { version = "0.14.0-rc.3", optional = true }
bevy_scene = { version = "0.14.0-rc.3", optional = true }

[dev-dependencies]
bevy = { version = "0.14.0-rc.3" }
fastrand = "2.1.0"
futures = { version = "0.3.30" }
