[workspace]
members = [ 
    "async_shared",
    "derive", 
]

[package]
name = "bevy_defer"
version = "0.13.0"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy_defer"
description = """
A simple asynchronous runtime for executing async coroutines.
"""
keywords = ["bevy", "async", "defer"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["bevy_animation", "bevy_scene", "bevy_sprite", "bevy_render", "bevy_text", "bevy_pbr", "bevy_picking", "derive"]
derive = ["bevy_defer_derive"]
bevy_animation = ["bevy/bevy_animation"]
bevy_scene = ["bevy/bevy_scene"]
bevy_sprite = ["bevy/bevy_sprite"]
bevy_render = ["bevy/bevy_render"]
bevy_text = ["bevy/bevy_text"]
bevy_picking = ["bevy/bevy_picking"]
bevy_pbr = ["bevy/bevy_pbr"]
# Enable the `default_constructor` macro.
spawn_macro = ["default-constructor"]
# Displays full type path in `AccessError`s.
full_types = []

[dependencies]
async_shared = {version = "0.2", path = "./async_shared"}
bevy_defer_derive = { version = "0.2", path = "./derive", optional = true }
futures = { version = "0.3.30", default-features = false }
async-executor = "1.10.0"

thiserror = "1"
ref-cast = "1.0.22"
rustc-hash = "2.0.0"
async-oneshot = "0.5.9"
scoped-tls-hkt = "0.1.4"
event-listener = "5.3.0"
event-listener-strategy = "0.5.2"
ty_map_gen = "0.1.6"

bevy = { version = "0.15.0-rc.3", default-features = false, features = ["bevy_state", "bevy_asset"] }
pretty-type-name = "1.0.1"
flume = { version = "0.11.1", default-features = false, features = ["async", "futures-core"] }
default-constructor = { version = "0.5", optional = true }

[dev-dependencies]
bevy = { version = "0.15.0-rc.3" }
fastrand = "2.1.0"
futures = { version = "0.3.30" }
