[package]
name = "async_shared"
version = "0.2.0"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy_defer"
description = """
A simple signal implementation.
"""
keywords = ["async", "shared", "signal"]

[dependencies]
event-listener = "5.3.1"
futures-core = "0.3.30"
futures-util = { version = "0.3.30", default-features = false }
