[package]
name = "bevy_defer_derive"
version = "0.3.0"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

repository = "https://github.com/mintlu8/bevy_defer"
description = """
Derive macroes for bevy_defer.
"""
keywords = ["bevy", "async", "defer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "3.1.0"
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.81"
quote = "1.0.36"
syn = { version = "2.0.60", features = ["full"] }
