[package]
name = "bevy_defer_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
http2 = ["hyper/http2"]

[dependencies]
async-io = "2.3.2"
bevy_defer = { version = "0.4", path = "../"}
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["http1", "client"] }
smol-hyper = { version = "0.1.1", default-features = false, features = ["async-io"] }
thiserror = "1.0.58"

[dev-dependencies]
bevy = "0.13"
