[package]
name = "bevy_defer_http"
version = "0.0.4"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy_defer"
description = """
Hyper based http utilies for bevy_defer.
"""
keywords = ["bevy", "async", "defer", "client"]

[features]
#http2 = ["hyper/http2"]

[dependencies]
async-io = "2.3.2"
bevy_defer = { version = "0.11", path = "../"}
http-body-util = "0.1.1"
hyper = { version = "1.2.0", features = ["http1", "client"] }
smol-hyper = { version = "0.1.1", default-features = false, features = ["async-io"] }
thiserror = "1.0.58"

[dev-dependencies]
bevy = "0.13"
