[package]
name = "bevy_defer_picking"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_defer = { version = "0.11.0", path = ".." }
bevy_ecs = "0.13.2"
bevy_math = "0.13.2"
bevy_mod_picking = { version = "0.18.2", default-features = false, features = ["selection"] }
ref-cast = "1.0.22"
rustc-hash = "1.1.0"

[dev-dependencies]
bevy = { version = "0.13.0" }
futures = { version = "0.3.30" }
bevy_mod_picking = { version = "0.18.2" }

