[package]
name = "bevy_defer_picking"
version = "0.0.1"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy_defer"
description = """
bevy_defer reactors for bevy_mod_picking.
"""
keywords = ["bevy", "async", "defer", "picking"]


[dependencies]
bevy_defer = { version = "0.11.0", path = ".." }
bevy_ecs = "0.13.2"
bevy_math = "0.13.2"
bevy_mod_picking = { version = "0.18.2", default-features = false, features = ["selection"] }
rustc-hash = "1.1.0"

[dev-dependencies]
bevy = { version = "0.13.0" }
futures = { version = "0.3.30" }
bevy_mod_picking = { version = "0.18.2" }

