[package]
name = "bevy_defer_picking"
version = "0.0.1"
edition = "2021"

authors = ["Mincong Lu <mintlux667@gmail.com>"]
license = "MIT OR Apache-2.0"

readme = "README.md"
repository = "https://github.com/mintlu8/bevy_defer"
description = """
bevy_defer reactors for bevy_mod_picking.
"""
keywords = ["bevy", "async", "defer", "picking"]


[dependencies]
bevy_defer = { version = "0.12.0", path = ".." }
bevy_ecs = "0.14.0-rc.4"
bevy_math = "0.14.0-rc.4"
bevy_mod_picking = { version = "0.20.0-rc.0", default-features = false, features = ["selection"] }
rustc-hash = "2.0.0"

[dev-dependencies]
bevy = { version = "0.14.0-rc.4" }
futures = { version = "0.3.30" }
bevy_mod_picking = { version = "0.19.0" }

